--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,18 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^9.0.0
+  cloud_firestore: ^5.6.1
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.4.0
+  firebase_core: ^3.10.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.0.0
+  flutter_svg: ^2.0.17
+  fluttertoast: ^8.2.10
   go_router: ^14.6.3
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
@@ -56,7 +57,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/splash.jpg
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -68,9 +69,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Cyntho Next
+    - family: Cairo
       fonts:
-        - asset: assets/fonts/CynthoNextRegular.otf
+        - asset: assets/fonts/Cairo-Regular.ttf
           # style: italic
   #   - family: Trajan Pro
   #     fonts:
@@ -80,3 +81,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_assets:
+  assets_path: assets/images
+  output_path: lib/core/utils
+  filename: app_images.dart
+  field_prefix: null
