--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^9.0.0
+  bottom_navy_bar: ^6.1.0
   cloud_firestore: ^5.6.1
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.4.0
@@ -39,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.17
   fluttertoast: ^8.2.10
   go_router: ^14.6.3
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
