Refactor and add cart functionality
- Renamed `uId` to `kuId` in `constants.dart` and added `kCart` constant.
- Added `Failure` class and `ServerFailure` subclass in `failure.dart`.
- Updated `app_router.dart` to include `SplashView` and correct paths.
- Added `CacheHelper` class for handling shared preferences in `cache_helper.dart`.
- Introduced `DatabaseService` and `FireStoreService` for database operations in `database_servuce.dart` and `firesore_service.dart`.
- Created `CartManger` and `Product` models in `cart_manger.dart` and `product.dart`.
- Added `Review` model in `review.dart`.
- Created `CartModel` in `cart.dart`.
- Implemented `CartCubit` and `CartState` for managing cart state in `cart_cubit.dart` and `cart_state.dart`.
- Updated `cart_view.dart` to use `CartCubit` and display cart items.
- Modified `build_order_summary.dart` to dynamically calculate and display order summary.
- Updated `cart_view_body.dart` to display cart items dynamically.
- Modified `custom_cart_item.dart` to display product details and handle item deletion.
- Updated `custom_row_cart_item_info.dart` to display product information and handle item deletion.
- Modified `cutsom_cart_price_details.dart` to support dynamic price colors.
- Updated `restaurant.dart` to import `Product` from the correct path.
- Added `updateProductQuantity` method in `app_cubit.dart`.
- Updated `app_layout.dart` to use `BlocConsumer` directly.
- Modified `otp_cubit.dart` to store user ID in `CacheHelper` and `kuId`.
- Updated product-related files to import `Product` from the correct path.
- Added `CounterCubit` for managing product quantity in `counter_cubit.dart`.
- Updated `build_bottom_sheet.dart` to handle adding products to the cart and updating quantities.
- Modified `custom_row_button_bottom_sheet.dart` to use `CounterCubit` for incrementing and decrementing product quantities.
- Updated `main.dart` to initialize `CacheHelper` and `AppCubit`.
- Added `shared_preferences` dependency in `pubspec.ya

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   fluttertoast: ^8.2.10
   go_router: ^14.6.3
   modal_progress_hud_nsn: ^0.5.1
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_lints: ^5.0.0
