--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^5.6.1
   conditional_builder_null_safety: ^0.0.6
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
   equatable: ^2.0.7
   firebase_auth: ^5.4.0
   firebase_core: ^3.10.0
@@ -42,6 +43,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   flutter_svg: ^2.0.17
   fluttertoast: ^8.2.10
+  get_it: ^8.0.3
   go_router: ^14.6.3
   modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.3.5
